5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1734_2507.log
== TEST (2019-05-14 18:23:59) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
tc=int(input("percentual de crescimento: "))
por=tc/100
meses=0
soma=0
while(bye=int(input("pirarucus reteirados para venda: "))):
	if(qnt>8000):
		mensagem= "ZERO"
		meses=meses+1
		soma=soma+meses
		print(mensagem)
	else(qnt<8000):
		mensagem= "MAXIMO"
		meses=meses+1
		print(mensagem)

-- ERROR:
File "XXXX", line 6
    while(bye=int(input())):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:33:41) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
tc=int(input("percentual de crescimento: "))
por=tc/100
meses=0
soma=0
while(bye=int(input("pirarucus reteirados para venda: "))):
	if(qnt>8000):
		mensagem= "ZERO"
		meses=meses+1
		soma=soma+meses
		print(mensagem)
	else(qnt<8000):
		mensagem= "MAXIMO"
		meses=meses+1
		print(mensagem)

-- ERROR:
File "XXXX", line 6
    while(bye=int(input())):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:39:10) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
tc=int(input("percentual de crescimento: "))
por=tc/100
meses=0
soma=0
while(qnt!=8000):
	bye=int(input("quantidade peixes retirados"))
	if(qnt>8000):
		mensagem= "ZERO"
		meses=meses+1
		soma=soma+meses
		print(mensagem)
	else(qnt<8000):
		mensagem= "MAXIMO"
		meses=meses+1
		print(mensagem)

-- ERROR:
File "XXXX", line 13
    else(qnt<8000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:39:30) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
tc=int(input("percentual de crescimento: "))
por=tc/100
meses=0
soma=0
while(qnt!=8000):
	bye=int(input("quantidade peixes retirados"))
	if(qnt>8000):
		mensagem= "ZERO"
		meses=meses+1
		soma=soma+meses
		print(mensagem)
	else(qnt=8000):
		mensagem= "MAXIMO"
		meses=meses+1
		print(mensagem)

-- ERROR:
File "XXXX", line 13
    else(qnt=8000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:39:45) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
tc=int(input("percentual de crescimento: "))
por=tc/100
meses=0
soma=0
while(qnt!=8000):
	bye=int(input("quantidade peixes retirados"))
	if(qnt>8000):
		mensagem= "ZERO"
		meses=meses+1
		soma=soma+meses
		print(mensagem)
	else(qnt==8000):
		mensagem= "MAXIMO"
		meses=meses+1
		print(mensagem)

-- ERROR:
File "XXXX", line 13
    else(qnt==8000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:39:47) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
tc=int(input("percentual de crescimento: "))
por=tc/100
meses=0
soma=0
while(qnt!=8000):
	bye=int(input("quantidade peixes retirados"))
	if(qnt>8000):
		mensagem= "ZERO"
		meses=meses+1
		soma=soma+meses
		print(mensagem)
	else(qnt==8000):
		mensagem= "MAXIMO"
		meses=meses+1
		print(mensagem)

-- ERROR:
File "XXXX", line 13
    else(qnt==8000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:40:40) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
tc=int(input("percentual de crescimento: "))
por=tc/100
meses=0
soma=0
while(qnt1!=8000):
	bye=int(input("quantidade peixes retirados"))
	if(qnt>8000):
		mensagem= "ZERO"
		meses=meses+1
		soma=soma+meses
		print(mensagem)
	else(qnt1==8000):
		mensagem= "MAXIMO"
		meses=meses+1
		print(mensagem)

-- ERROR:
File "XXXX", line 13
    else(qnt1==8000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:41:14) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
tc=int(input("percentual de crescimento: "))
por=tc/100
meses=0
soma=0
while(qnt1!=8000):
	bye=int(input("quantidade peixes retirados"))
	if(qnt>8000):
		mensagem= "ZERO"
		meses=meses+1
		soma=soma+meses
		print(mensagem)
	else(qnt1<=8000):
		mensagem= "MAXIMO"
		meses=meses+1
		print(mensagem)

-- ERROR:
File "XXXX", line 13
    else(qnt1<=8000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:42:23) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
pc=int(input("percentual de crescimento: "))
por=pc/100
meses=0
while(0<qnt1<=8000):
	bye=int(input("quantidade peixes retirados"))
	qnt1=(qnt1+qnt1*por)-bye
	meses=meses+1
if(qnt1<=0):
		mensagem= "ZERO"
		print(meses)
else(qnt1>=8000):
		mensagem= "MAXIMO"
		print(meses)

-- ERROR:
File "XXXX", line 12
    else(qnt1>=8000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:42:35) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
pc=int(input("percentual de crescimento: "))
por=pc/100
meses=0
while(0<qnt1<=8000):
	bye=int(input("quantidade peixes retirados"))
	qnt1=(qnt1+qnt1*por)-bye
	meses=meses+1
if(qnt1<=0):
		mensagem= "ZERO"
		print(meses)
if(qnt1>=8000):
		mensagem= "MAXIMO"
		print(meses)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:43:50) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
pc=int(input("percentual de crescimento: "))
por=pc/100
meses=0
while(0<qnt1<=8000):
	bye=int(input("quantidade peixes retirados: "))
	qnt1=(qnt1+qnt1*por)-bye
	meses=meses+1
if(qnt1<=0):
		print("ZERO")
		print(meses)
if(qnt1>=8000):
		print("MAXIMO")
		print(meses)

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:44:09) 
-- CODE:
qnt1=int(input("quantidade inicial de pirarucus: "))
pc=int(input("percentual de crescimento: "))
por=pc/100
meses=0
while(0<qnt1<=8000):
	bye=int(input("quantidade peixes retirados: "))
	qnt1=(qnt1+qnt1*por)-bye
	meses=meses+1
if(qnt1<=0):
		print("ZERO")
		print(meses)
if(qnt1>=8000):
		print("MAXIMO")
		print(meses)

-- EXECUTION TIME:
0.152926
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
